hphp/test/quick/xhp-malformed.php.expectf

Fatal error: This character is invalid. in %s/xhp-malformed.php on line 5
